Added LOGIN SCREEN  - Added an Authorization Component as a higher order component  - Wrapped Wizard Component around the Authorization Component

--- a/src/core/components/wizard.css
+++ b/src/core/components/wizard.css
@@ -50,3 +50,8 @@ select.active:invalid {
     padding: 10px 0;
     font-size: 1.2em;
 }
+
+.center {
+    text-align: center;
+    margin: 0 auto;
+}
