Added CSS classes for required field and form-groups

--- a/src/core/components/wizard.css
+++ b/src/core/components/wizard.css
@@ -21,7 +21,7 @@
 
 .wizard-footer {
     overflow: auto;
-    margin: 20px auto;
+    margin: 40px auto 20px auto;
     text-align: center;
 }
 
@@ -32,6 +32,12 @@
 input.active:valid,
 select.active:valid {
     box-shadow: 0 0 1px 2px green;
+}
+
+div.required label::after {
+    content: '*';
+    display: inline;
+    color: red;
 }
 
 input.active:invalid,
